testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment15.errors.txt
a.js(10,12): error TS2749: 'Outer.Inner' refers to a value, but is being used as a type here. Did you mean 'typeof Outer.Inner'?


==== a.js (1 errors) ====
    var Outer = {};
    
    Outer.Inner = class {
        constructor() {
            this.x = 1
        }
        m() { }
    }
    
    /** @type {Outer.Inner} */
               ~~~~~~~~~~~
!!! error TS2749: 'Outer.Inner' refers to a value, but is being used as a type here. Did you mean 'typeof Outer.Inner'?
    var inner
    inner.x
    inner.m()
    var inno = new Outer.Inner()
    inno.x
    inno.m()
    